# mcp-manager

./: .gitlab-ci.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  config.example.yaml  config.yaml.example
src/: config.rs  error.rs  lib.rs  main.rs  mcp.rs
src/auth/: mod.rs
src/mcp/: local.rs  mod.rs
src/models/: anthropic.rs  auth.rs  azure.rs  client.rs  gemini.rs  mod.rs  openai.rs
