[package]
name = "mcp-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
rmcp = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
