[package]
name = "mcp-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rmcp = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["add-extension"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
