[package]
name = "mcp-manager"
version = "0.3.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = "0.4"
futures = "0.3"
oauth2 = "5"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["client", "reqwest", "transport-child-process", "transport-sse-client", "transport-streamable-http-client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["add-extension"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
